--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,6 +2,8 @@
 pipelining=True
 ssh_args = -o ControlMaster=auto -o ControlPersist=30m -o ConnectionAttempts=100 -o UserKnownHostsFile=/dev/null
 #control_path = ~/.ssh/ansible-%%r@%%h:%%p
+
+
 [defaults]
 host_key_checking=False
 gathering = smart
@@ -13,3 +15,12 @@ callback_whitelist = profile_tasks
 roles_path = roles:$VIRTUAL_ENV/usr/local/share/kubespray/roles:$VIRTUAL_ENV/usr/local/share/ansible/roles:/usr/share/kubespray/roles
 deprecation_warnings=False
 inventory_ignore_extensions = ~, .orig, .bak, .ini, .cfg, .retry, .pyc, .pyo, .creds
+log_path = ./ansible.log
+remote_port = 2202
+remote_user = pure-linux
+inventory = inventory/mycluster/hosts.ini
+timeout = 30
+
+[privilege_escalation]
+become = True
+become_ask_pass = True
