--- a/ansible.cfg
+++ b/ansible.cfg
@@ -16,8 +16,8 @@ roles_path = roles:$VIRTUAL_ENV/usr/local/share/kubespray/roles:$VIRTUAL_ENV/usr
 deprecation_warnings=False
 inventory_ignore_extensions = ~, .orig, .bak, .ini, .cfg, .retry, .pyc, .pyo, .creds
 log_path = ./ansible.log
-remote_port = 2202
-remote_user = pure-linux
+remote_port = 22
+remote_user = kubeadm
 inventory = inventory/mycluster/hosts.ini
 timeout = 30
 
