--- a/ansible.cfg
+++ b/ansible.cfg
@@ -18,7 +18,7 @@ inventory_ignore_extensions = ~, .orig, .bak, .ini, .cfg, .retry, .pyc, .pyo, .c
 log_path = ./ansible.log
 remote_port = 22
 remote_user = kubeadm
-inventory = inventory/mycluster/hosts.ini
+inventory = hosts.ini
 timeout = 30
 
 [privilege_escalation]
