--- a/group_vars/k8s-cluster.yml
+++ b/group_vars/k8s-cluster.yml
@@ -194,7 +194,7 @@ local_volume_provisioner_enabled: false
 # local_volume_provisioner_storage_class: local-storage
 
 # CephFS provisioner deployment
-cephfs_provisioner_enabled: true
+cephfs_provisioner_enabled: false
 cephfs_provisioner_namespace: "cephfs-provisioner"
 cephfs_provisioner_cluster: ceph
 cephfs_provisioner_monitors: "172.24.0.1:6789,172.24.0.2:6789,172.24.0.3:6789"
